compiler/error/tests/src/main.waso
fn add_one(i32 num) {
  -> num + 1
}

fn main() {
  i64 num <- 10

  add_one(num)

  u32 <- 20
}

fn add_one(i32 num) {
  -> num + 1
}
